<resources>
    <string name="app_name">Hexclan</string>
    <string name="uNamehint">Username</string>
    <string name="passhint">Password</string>
    <string name="loginBtn">Login</string>
    <string name="SignInAsParent">Sign in as parent?</string>
    <string name="SignInAsStudent">Sign in as student?</string>
    <string name="College">College</string>
    <string name="Welcome">Welcome</string>
    <string name="menuImageCd">MenuImage</string>
    <string name="thisMonth">This Month</string>
    <string name="RequestLeaveLbl">Request Leave</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="pick_date">Pick Date</string>
    <string name="Reason">Reason</string>
    <string name="ReasonForLeave">Reason for leave</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="attendanceImg">Attendance Image</string>
    <string name="RequestLeaveImage">Request Leave\'</string>
    <string name="NotificationsImage">Notifications Image</string>
    <string name="Notifications">Notifications</string>
    <string name="RequestLeave">Request Leave</string>
    <string name="LeaveRequest">Leave Requests</string>
    <string name="LiveStatus">Live Status</string>
    <string name="Attendance">Attendance</string>
    <string name="totalAttendance">Total Attendance</string>
    <string name="ApprovedStatus">Status: Approved</string>
    <string name="RejectedStatus">Status: Rejected</string>
    <string name="PendingStatus">Status: Pending</string>
    <string name="statusIn">Status: In</string>
    <string name="statusOut">Status: Out</string>
    <string name="Inaccessible">Status: Inaccessible</string>
    <string name="ApproveStatus">Approve</string>
    <string name="RejecteStatus">Reject</string>
    <string name="blank">-------</string>
    <string name="username">Bhavik Bhatia</string>
    <string name="mobile">7069096439</string>
    <string name="email">bhavikbhatia9@gmail.com</string>
    <string name="ReadMore">More</string>
    <string name="editProfileImg">Edit Profile Image</string>
    <string name="editMobile">Edit Mobile</string>
    <string name="editPassword">Edit Password</string>
    <string name="address">Godrej Garden City, near Gota, Chandkheda</string>
    <string name="emailTitle">Email</string>
    <string name="addressTitle">Address</string>
    <string name="Institute">Institute</string>
    <string name="ParentMobile">Parent Mobile</string>
    <string name="ParentName">Parent Name</string>
    <string name="ParentEmail">Parent Email</string>
    <string name="DepartmentActivity">Department Activity</string>
    <string name="UpcomingEvents">Upcoming Events</string>
    <string name="SignInToParent">Sign in as Parent?</string>
    <string name="SignInToStudent">Sign in as Student?</string>
    <string name="todo">TODO</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="total">Total</string>
    <string name="AttendanceInNumbers">Attendance percentage</string>
</resources>