<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteShade"
    tools:context=".Student.ProfileStudent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/Profile"
        app:titleTextColor="#FFFFFF" />
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImg"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_account_circle_24"
            android:visibility="visible" />
        <TextView
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/username"
            android:textColor="@color/greyShade"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
        <TextView
            android:id="@+id/profileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/mobile"
            android:textColor="@color/greyShade"
            android:textSize="16sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
        <TextView
            android:id="@+id/profileEmailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/emailTitle"
            android:textColor="@color/greyShade"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/greyShade"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/addressTitle"
            android:textColor="@color/greyShade"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/profileAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="@color/greyShade"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/Institute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Institute"
            android:textColor="@color/greyShade"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/profileInstitute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/blank"
            android:textColor="@color/greyShade"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ParentMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ParentMobile"
            android:textColor="@color/greyShade"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/profileParentMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/blank"
            android:textColor="@color/greyShade"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/ParentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ParentName"
            android:textColor="@color/greyShade"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/profileParentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/blank"
            android:textColor="@color/greyShade"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/ParentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ParentEmail"
            android:textColor="@color/greyShade"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
        <TextView
            android:id="@+id/profileParentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/blank"
            android:textColor="@color/greyShade"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>